Fix pagination on mobile, bump dependencies

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -76,3 +76,17 @@ ol.user-steps {
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+    li.paginate_button.previous {
+        display: inline;
+    }
+ 
+    li.paginate_button.next {
+        display: inline;
+    }
+ 
+    li.paginate_button {
+        display: none;
+    }
+}
